src/test/ui/borrowck/borrowck-storage-dead.stderr
error[E0381]: binding `x` isn't initialized
  --> $DIR/borrowck-storage-dead.rs:16:17
   |
LL |         let x: i32;
   |             - variable declared here
LL |         let _ = x + 1;
   |                 ^ `x` used here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
